--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URL=mongodb+srv://Pulkit_07:pulkitgarg@socialbookcluster.n1mgb7x.mongodb.net/SocialBook?retryWrites=true&w=majority
+PORT=8000
